--- a/pages/success/index.html
+++ b/pages/success/index.html
@@ -1,59 +1,68 @@
 <!doctype html>
 <html>
-  <head>
-    <title>My HTML File</title>
-    <link rel="stylesheet" href="/dist/css/styles.css" />
-  </head>
-  <body>
-    <div
-      class="w-[100vw] h-[100vh] bg-[#f0f0f0] flex items-center justify-center"
-    >
-      <div class="flex flex-col items-center">
-        <svg
-          width="80px"
-          height="80px"
-          viewBox="0 0 512 512"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="#000000"
+    <head>
+        <title>My HTML File</title>
+        <link rel="stylesheet" href="/dist/css/styles.css" />
+    </head>
+    <body>
+        <div
+            class="w-[100vw] h-[100vh] bg-[#f0f0f0] flex items-center justify-center"
         >
-          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-          <g
-            id="SVGRepo_tracerCarrier"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          ></g>
-          <g id="SVGRepo_iconCarrier">
-            <defs>
-              <style>
-                .cls-1 {
-                  fill: none;
-                  stroke: #36ed12;
-                  stroke-linecap: round;
-                  stroke-linejoin: round;
-                  stroke-width: 20px;
-                }
-              </style>
-            </defs>
-            <g data-name="Layer 2" id="Layer_2">
-              <g
-                data-name="E408, Success, Media, media player, multimedia"
-                id="E408_Success_Media_media_player_multimedia"
-              >
-                <circle class="cls-1" cx="256" cy="256" r="246"></circle>
-                <polyline
-                  class="cls-1"
-                  points="115.54 268.77 200.67 353.9 396.46 158.1"
-                ></polyline>
-              </g>
-            </g>
-          </g>
-        </svg>
-        <p class="text-[16px] mt-[30px]">
-          Logged in successfully. You are free to close this tab
-        </p>
-      </div>
-    </div>
+            <div class="flex flex-col items-center">
+                <svg
+                    width="80px"
+                    height="80px"
+                    viewBox="0 0 512 512"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#000000"
+                >
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <defs>
+                            <style>
+                                .cls-1 {
+                                    fill: none;
+                                    stroke: #36ed12;
+                                    stroke-linecap: round;
+                                    stroke-linejoin: round;
+                                    stroke-width: 20px;
+                                }
+                            </style>
+                        </defs>
+                        <g data-name="Layer 2" id="Layer_2">
+                            <g
+                                data-name="E408, Success, Media, media player, multimedia"
+                                id="E408_Success_Media_media_player_multimedia"
+                            >
+                                <circle
+                                    class="cls-1"
+                                    cx="256"
+                                    cy="256"
+                                    r="246"
+                                ></circle>
+                                <polyline
+                                    class="cls-1"
+                                    points="115.54 268.77 200.67 353.9 396.46 158.1"
+                                ></polyline>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+                <p class="text-[16px] mt-[30px]">
+                    Logged in successfully. You are free to close this tab
+                </p>
+                <p class="text-[14px] mt-[10px] text-[#656565]">
+                    (open tool with <kbd class="text-[12px]">Alt+Space</kbd> or
+                    <kbd class="text-[12px]">Option+Space</kbd>)
+                </p>
+            </div>
+        </div>
 
-    <script src="./index.js"></script>
-  </body>
+        <script src="./index.js"></script>
+    </body>
 </html>
